Dark emails done.

--- a/email-templates/light-10.html
+++ b/email-templates/light-10.html
@@ -520,7 +520,7 @@
                             </a>
                             <div class="hb-line"></div>
                             <a class="flex items-center content-center hb-link" style="gap: 6px;">
-                                <img src="./assets/phone.png" alt="Phone">
+                                <img src="./assets/envelope.png" alt="Phone">
                                 <span>SmartHub@smarthub.trycarsmart.com</span>
                             </a>
                         </div>
