--- a/email-templates/light-8-1.html
+++ b/email-templates/light-8-1.html
@@ -346,17 +346,20 @@
             .help-box .cd-price {
                 font-size: 40px;
             }
-            .auction-car{
+
+            .auction-car {
                 height: 202px;
                 aspect-ratio: 37/20;
                 object-fit: cover;
                 object-position: center;
                 border-radius: 6px;
             }
-            .tc-8{
+
+            .tc-8 {
                 height: 154px;
             }
-            .ch-8 .tc-text{
+
+            .ch-8 .tc-text {
                 max-width: 345px;
             }
         </style>
@@ -369,40 +372,25 @@
                 <div class="flex-main" style="padding-bottom: 20px;">
                     <div class="card-hero ch-8">
                         <div class="tc-text">
-                            <h3 class="tc-title text-dark fw-medium text-left">Ensure a Smooth Sale – Upload Your 
-                                <span class="text-purple">Documents Early!</span></h3>
+                            <h3 class="tc-title text-dark fw-medium text-left">12 pictures required retake</h3>
                         </div>
-                        <span style="padding: 20px 20px 20px 0;"><img src="./assets/3-Illustration.png" alt="Car" class="tc-8"></span>
+                        <span style="padding: 20px 20px 20px 0;"><img src="./assets/3-Illustration.png" alt="Car"
+                                class="tc-8"></span>
                     </div>
                     <div class="flex-col">
                         <div class="flex-col gap-10 items-center text-center" style="padding: 0px 40px;">
-                            <p class="fw-light" style="color: rgba(19, 20, 26, 0.8); font-size: 14px;">To make your sale as seamless as possible and avoid any delays in receiving your payment, please upload your documents early while your sale is ongoing. This ensures everything is ready when your highest offer is confirmed. </p>
-                        </div>
-                    </div>
-                    <div class="flex-col gap-20" style="padding: 0 27px;">
-                        <span class="fw-medium text-dark text-left" style="font-size: 20px;">Quick Tips for a Successful Sale:</span>
-                        <div class="flex-col gap-20">
-                            <div class="flex gap-10">
-                                <span>
-                                    <img src="./assets/next-1.png" alt="Next" class="next-counter">
-                                </span>
-                                <div class="flex-col gap-6 text-left">
-                                    <span class="fw-semibold text-dark" style="font-size: 14px;">Double-check document clarity</span>
-                                    <span class="fw-normal text-light-dark" style="font-size: 14px;">Make sure all uploads are clear and legible to prevent any processing delays.</span>
-                                </div>
-                            </div>
-                            <div class="flex gap-10">
-                                <span>
-                                    <img src="./assets/next-2.png" alt="Next" class="next-counter">
-                                </span>
-                                <div class="flex-col gap-6 text-left">
-                                    <span class="fw-semibold text-dark" style="font-size: 14px;">Verify your contact information</span>
-                                    <span class="fw-normal text-light-dark" style="font-size: 14px;">Ensure your profile details are accurate so the buyer can easily reach you for collection arrangements.</span>
-                                </div>
+                            <p class="fw-light"
+                                style="color: rgba(19, 20, 26, 0.8); font-size: 14px; line-height: 150%;">Add a second
+                                email template that we can reuse for when the upload of car has errors and we need
+                                client to change something. Mainly needs space for written content. </p>
+                            <div class="flex-col items-center">
+                                <a href="#" class="btn btn-main">
+                                    <span>Update now</span>
+                                    <img src="./assets/Rays-small.png" alt="Rays">
+                                </a>
                             </div>
                         </div>
                     </div>
-                    <span class="fw-normal text-center text-light-dark" style="font-size: 14px; padding: 0 30px;">Act now to keep your sale on track and get paid promptly!</span>
                 </div>
             </div>
             <div class="card text-center" style="padding: 24px;">
