--- a/email-templates/light-template-with-signature.html
+++ b/email-templates/light-template-with-signature.html
@@ -508,7 +508,7 @@
                             </a>
                             <div class="hb-line"></div>
                             <a class="flex items-center content-center hb-link" style="gap: 6px;">
-                                <img src="./assets/phone.png" alt="Phone">
+                                <img src="./assets/envelope.png" alt="Phone">
                                 <span>SmartHub@smarthub.trycarsmart.com</span>
                             </a>
                         </div>
@@ -525,7 +525,7 @@
                     <div class="flex-col text-left gap-10" style="justify-content: space-between;">
                         <div class="flex-col">
                             <span class="fw-semibold text-primary">John Carter</span>
-                            <span class="fw-light text-light-dark">VP of Design</span>
+                            <span class="fw-light text-light-dark" style="font-size: 12px;">VP of Design</span>
                         </div>
                         <div class="flex gap-10 items-center">
                             <a href="#"><img src="./assets/fb-icon.png" alt="Icon" class="sign-icon"></a>
@@ -536,9 +536,9 @@
                 </div>
                 <div class="sign-line"></div>
                 <div class="flex-col gap-8 text-left sign-right">
-                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/sign-envelope.png" alt="Env" class="sr-icon"><span class="fw-light text-dark">email@example.com</span></a>
-                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/sign-phone.png" alt="Env" class="sr-icon"><span class="fw-light text-dark">+123456789</span></a>
-                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/map-pin.png" alt="Env" class="sr-icon"><span class="fw-light text-dark">123 Main Street Anytown, CA 12345</span></a>
+                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/sign-envelope.png" alt="Env" class="sr-icon"><span class="fw-light text-dark" style="font-size: 14px;">email@example.com</span></a>
+                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/sign-phone.png" alt="Env" class="sr-icon"><span class="fw-light text-dark" style="font-size: 14px;">+123456789</span></a>
+                    <a href="#" class="flex items-center gap-8" style="text-decoration:none;"><img src="./assets/map-pin.png" alt="Env" class="sr-icon"><span class="fw-light text-dark" style="font-size: 14px;">123 Main Street Anytown, CA 12345</span></a>
                 </div>
             </div>
         </main>
