--- a/pages.html
+++ b/pages.html
@@ -18,7 +18,7 @@
         
         <div class="d-flex text-center align-items-center py-5 flex-column" style="min-height: 100vh; font-size: 20px;">
             <h2 class="text-center text-white mb-4">Carsmart: Pages List</h2>
-            <ol class="fw-semibold text-white text-start text-capitalize">
+            <ol class="fw-semibold text-white text-start text-capitalize mb-5">
                 <li><a href="./live-sale.html" class="text-parrot">Auction: Live Sale</a></li>
                 <li><a href="./signin-1.html" class="text-parrot">Sign In 1</a></li>
                 <li><a href="./signin-2.html" class="text-parrot">Sign In 2</a></li>
@@ -52,7 +52,6 @@
                 <li><a href="./car-details-smartconnect-sale.html" class="text-parrot">Vehicle details smartconnect sale</a></li>
                 <li><a href="./car-details-wholesale.html" class="text-parrot">Vehicle details wholesale</a></li>
                 <li><a href="./car-details-smartexchange.html" class="text-parrot">Vehicle details smartexchange</a></li>
-                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 23-Nov-2024 ------</a></li>
                 <li><a href="./dashboard-offered.html" class="text-parrot">Dashboard SmartExchange offered</a></li>
                 <li><a href="./dashboard-received.html" class="text-parrot">Dashboard SmartExchange received</a></li>
                 <li><a href="./dashboard-listings.html" class="text-parrot">Dashboard vehicle listings</a></li>
@@ -63,11 +62,9 @@
                 <li><a href="./live-sale-notice.html" class="text-parrot">Live Sale Notice</a></li>
                 <li><a href="./smarthub-fees.html" class="text-parrot">SmartHub Fees</a></li>
                 <li><a href="./changes-and-voided-sales.html" class="text-parrot">Changes and voided sales form</a></li>
-                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 25-Nov-2024 ------</a></li>
                 <li><a href="./sell-my-car-brand.html" class="text-parrot">Sell My Car Landing Page</a></li>
                 <li><a href="./kyc-verification.html" class="text-parrot">KYC verification</a></li>
                 <li><a href="./account-reporting.html" class="text-parrot">Account Reporting</a></li>
-                <li class="list-unstyled"><a style="font-size: 35px;" class="text-white text-center">------ 28-Nov-2024 ------</a></li>
                 <li><a href="./car-details-sold.html" class="text-parrot">Vehicle Details Sold</a></li>
                 <li><a href="./car-details-sold-seller.html" class="text-parrot">Vehicle Details Sold - Seller Information</a></li>
                 <li><a href="./car-details-sold-buyer.html" class="text-parrot">Vehicle Details Sold - Buyers Information</a></li>
@@ -92,6 +89,49 @@
                 <li><a href="./add-car-9-recap-2.html" class="text-info">Add Car 9 (Recap 2)</a></li>
                 <li><a href="./add-car-10.html" class="text-info">Add Car 10</a></li>
                 <li><a href="./add-car-11.html" class="text-info">Add Car 11</a></li>
+            </ol>
+            <h2 class="text-center text-white mb-4">Carsmart: Email Templates (LIGHT)</h2>
+            <ol class="fw-semibold text-white text-start text-capitalize mb-5">
+                <li><a href="./email-templates/light-1.html" class="text-parrot">Template 1</a></li>
+                <li><a href="./email-templates/light-2.html" class="text-parrot">Template 2</a></li>
+                <li><a href="./email-templates/light-3.html" class="text-parrot">Template 3</a></li>
+                <li><a href="./email-templates/light-4.html" class="text-parrot">Template 4</a></li>
+                <li><a href="./email-templates/light-5.html" class="text-parrot">Template 5</a></li>
+                <li><a href="./email-templates/light-6.html" class="text-parrot">Template 6</a></li>
+                <li><a href="./email-templates/light-7.html" class="text-parrot">Template 7</a></li>
+                <li><a href="./email-templates/light-8.html" class="text-parrot">Template 8</a></li>
+                <li><a href="./email-templates/light-8-1.html" class="text-parrot">Template 8.1</a></li>
+                <li><a href="./email-templates/light-9.html" class="text-parrot">Template 9</a></li>
+                <li><a href="./email-templates/light-10.html" class="text-parrot">Template 10</a></li>
+                <li><a href="./email-templates/light-11.html" class="text-parrot">Template 11</a></li>
+                <li><a href="./email-templates/light-12.html" class="text-parrot">Template 12</a></li>
+                <li><a href="./email-templates/light-13.html" class="text-parrot">Template 13</a></li>
+                <li><a href="./email-templates/light-14.html" class="text-parrot">Template 14</a></li>
+                <li><a href="./email-templates/light-15.html" class="text-parrot">Template 15</a></li>
+                <li><a href="./email-templates/light-16.html" class="text-parrot">Template 16</a></li>
+                <li><a href="./email-templates/light-17.html" class="text-parrot">Template 17</a></li>
+                <li><a href="./email-templates/light-template-with-signature.html" class="text-parrot">Template with signature</a></li>
+            </ol>
+            <h2 class="text-center text-white mb-4">Carsmart: Email Templates (DARK)</h2>
+            <ol class="fw-semibold text-white text-start text-capitalize mb-5">
+                <li><a href="./email-templates/dark-1.html" class="text-parrot">Template 1</a></li>
+                <li><a href="./email-templates/dark-2.html" class="text-parrot">Template 2</a></li>
+                <li><a href="./email-templates/dark-3.html" class="text-parrot">Template 3</a></li>
+                <li><a href="./email-templates/dark-4.html" class="text-parrot">Template 4</a></li>
+                <li><a href="./email-templates/dark-5.html" class="text-parrot">Template 5</a></li>
+                <li><a href="./email-templates/dark-6.html" class="text-parrot">Template 6</a></li>
+                <li><a href="./email-templates/dark-7.html" class="text-parrot">Template 7</a></li>
+                <li><a href="./email-templates/dark-8.html" class="text-parrot">Template 8</a></li>
+                <li><a href="./email-templates/dark-9.html" class="text-parrot">Template 9</a></li>
+                <li><a href="./email-templates/dark-10.html" class="text-parrot">Template 10</a></li>
+                <li><a href="./email-templates/dark-11.html" class="text-parrot">Template 11</a></li>
+                <li><a href="./email-templates/dark-12.html" class="text-parrot">Template 12</a></li>
+                <li><a href="./email-templates/dark-13.html" class="text-parrot">Template 13</a></li>
+                <li><a href="./email-templates/dark-14.html" class="text-parrot">Template 14</a></li>
+                <li><a href="./email-templates/dark-15.html" class="text-parrot">Template 15</a></li>
+                <li><a href="./email-templates/dark-16.html" class="text-parrot">Template 16</a></li>
+                <li><a href="./email-templates/dark-17.html" class="text-parrot">Template 17</a></li>
+                <li><a href="./email-templates/dark-template-with-signature.html" class="text-parrot">Template with signature</a></li>
             </ol>
         </div>
         <script src="./assets/js/jquery-3.7.1.min.js"></script>
