--- a/email-templates/dark-4.html
+++ b/email-templates/dark-4.html
@@ -127,12 +127,13 @@
             }
 
             .border {
+                width: 100%;
                 border-top: 1px solid rgba(211, 212, 253, 0.2);
             }
 
             .help-box {
-                background-color: rgba(236, 241, 253, 0.7);
-                border: 1px dashed rgba(105, 93, 253, 1);
+                background-color: rgba(236, 241, 253, 0.1);
+                border: 1px dashed rgba(255, 255, 255, 0.3);
                 padding: 20px;
                 border-radius: 10px;
                 display: flex;
@@ -165,7 +166,7 @@
             .hb-line {
                 height: 20px;
                 width: 1px;
-                background-color: #D3D4FD;
+                background-color: rgba(211, 212, 253, 1);
             }
 
             .tc-title {
@@ -173,8 +174,8 @@
             }
 
             .card-hero {
-                background-color: #E8EAF1;
-                background-image: url(./assets/top-bg.png);
+                background-color: #675DF4;
+                background-image: url(./assets/top-bg-dark.png);
                 background-size: contain;
                 background-repeat: repeat;
                 display: flex;
@@ -289,6 +290,18 @@
 
             .gap-24 {
                 gap: 24px;
+            }
+
+            .gap-26 {
+                gap: 26px;
+            }
+
+            .gap-28 {
+                gap: 28px;
+            }
+
+            .gap-30 {
+                gap: 30px;
             }
 
             .feat-img {
@@ -420,8 +433,18 @@
             }
 
             .purple-underline {
-                height: 7px;
+                position: relative;
+            }
+
+            .purple-underline::after {
+                content: "";
+                position: absolute;
+                bottom: -5px;
+                left: 0;
+                height: 5px;
                 width: 100%;
+                background-image: url(./assets/purple-underline.png);
+                background-size: 100% 100%;
             }
 
             .ch-16 .tc-car {
@@ -502,34 +525,134 @@
             <a href="#"><img src="./assets/carsmart-hub-logo.png" alt="Logo" class="top-logo"></a>
             <div class="card-outer">
                 <div class="co-bg">
-                    <div class="card text-center" style="padding: 40px 40px;">
-                        <div class="flex-main">
-                            <div class="flex-col" style="gap: 24px; align-items: center;">
-                                <div class="flex-col" style="gap: 14px; align-items: center;">
-                                    <h5 style="font-size: 22px; font-weight: 500;" class="text-white text-center">Hey
-                                        <span class="text-purple">Avanttransport</span><br> Reset Your SmartHub Password
-                                    </h5>
-                                    <p class="fw-light text-white">It looks like you requested to reset your password.
-                                        To ensure the security of your account, please click the button below to create
-                                        a new password:</p>
+                    <div class="card text-center">
+                        <div class="flex-main" style="padding-bottom: 20px;">
+                            <div class="card-hero">
+                                <div class="tc-text" style="max-width: 330px;">
+                                    <h3 class="tc-title text-white fw-medium text-left">Your Car Valuation is about to <span class="text-parrot">expire</span></h3>
                                 </div>
-                                <a href="#" class="btn btn-main">
-                                    <span>Reset password</span>
-                                    <img src="./assets/Rays-small.png" alt="Rays">
-                                </a>
+                                <div style="padding-top: 10px;">
+                                    <img src="./assets/Car-6.png" alt="Car" class="tc-car">
+                                </div>
                             </div>
-                            <div class="flex-col items-center" style="gap: 10px;">
-                                <p class="fw-light text-white text-center"> For your safety, this link will only be
-                                    active for the next 24 hours. If you did not request a password reset, please ignore
-                                    this email or contact us immediately. </p>
-                                <p class="text-white fw-light">SmartHub Customer Care Team</p>
+                            <div class="flex-col">
+                                <div class="flex-col gap-20 items-center">
+                                    <div class="flex-col card-details" style="gap: 10px; padding: 0 20px;">
+                                        <div class="car-plate">
+                                            <div class="cp-blue"></div>
+                                            <span class="text-dark cp-number">KY58CSM</span>
+                                        </div>
+                                        <div class="flex items-center content-center" style="gap: 20px;">
+                                            <span>
+                                                <img src="./assets/vw-logo.png" alt="Logo" class="cd-logo">
+                                            </span>
+                                            <div class="flex-col text-left" style="gap: 10px;">
+                                                <span class="cd-make fw-medium text-white">Volkswagen Golf S</span>
+                                                <div class="flex items-center" style="gap: 10px;">
+                                                    <span class="cd-info text-white fw-medium">2009</span><span
+                                                        class="cd-line"></span><span
+                                                        class="cd-info text-white fw-medium">Blue</span><span
+                                                        class="cd-line"></span><span
+                                                        class="cd-info text-white fw-medium">Hatchback</span><span
+                                                        class="cd-line"></span><span
+                                                        class="cd-info text-white fw-medium">Petrol</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div style="padding: 0 20px; width: 100%;">
+                                        <div class="help-box">
+                                            <div class="flex-col items-center gap-4 text-center">
+                                                <span class="fw-medium text-white">Reserve price</span>
+                                                <div class="flex-col items-center" style="width: fit-content; margin: 0 auto;">
+                                                    <span class="fw-medium cd-price text-white text-center"> £ 11,750 </span>
+                                                    <img src="./assets/parrot-underline.png" alt="Underline" class="price-underline">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="text-center flex-col gap-10" style="padding: 0 20px;">
+                                        <span class="fw-medium text-white text-center" style="font-size: 18px;">expires soon, on Wednesday 15th May at 12:45pm</span>
+                                        <span class="text-white fw-light">
+                                            Once your valuation expires, the value of your vehicle may change. So, don't miss out. You can still sell your Volkswagen at this price.
+                                        </span><span class="text-white fw-light">
+                                            Tap below to sell your car to trade the more money way.
+                                        </span>
+                                        <div class="flex-col items-center">
+                                            <a href="#" class="btn btn-main">
+                                                <span>Sell your car</span>
+                                                <img src="./assets/Rays-small.png" alt="Rays">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="flex-col gap-20 items-center">
+                                <span class="text-white fw-medium" style="font-size: 18px;">Why people love Carsmart</span>
+                                <div class="flex-col gap-10 items-center fw-light text-white">
+                                    <div class="flex items-center gap-10">
+                                        <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                        <span>Fast transfers</span>
+                                    </div>
+                                    <div class="flex items-center gap-10">
+                                        <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                        <span>Great exchange rates and no hidden fees</span>
+                                    </div>
+                                    <div class="flex items-center gap-10">
+                                        <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                        <span>Familiar providers</span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="border"></div>
-                            <p class="text-light fw-light" style="font-size: 12px; line-height: 200%;"> If the button above does not work,
-                                please copy and paste the following link into your browser: <br><a href="#"
-                                    style="text-decoration: none;"
-                                    class="text-parrot">[https://rrrrrr.co.ukoken=eyJhbGciOiJIUzI1NiIsInRjnAH]</a>
-                            </p>
+                            
+                            <div style="padding: 0 20px;">
+                                <div class="help-box">
+                                    <img src="./assets/Help-Avatar.png" alt="Avatar" class="help-avatar" style="height: 56px;">
+                                    <div class="flex-col" style="gap: 6px; align-items: center;">
+                                        <h5 class="fw-medium text-white" style="font-size: 16px;">Need help? Contact our team</h5>
+                                        <div class="flex items-center text-white content-center" style="gap: 10px;">
+                                            <a class="flex items-center content-center hb-link" style="gap: 6px;">
+                                                <img src="./assets/phone-white.png" alt="Phone">
+                                                <span>020 8050 4743</span>
+                                            </a>
+                                            <div class="hb-line"></div>
+                                            <a class="flex items-center content-center hb-link" style="gap: 6px;">
+                                                <img src="./assets/envelope-white.png" alt="Phone">
+                                                <span>SmartHub@smarthub.trycarsmart.com</span>
+                                            </a>
+                                        </div>
+                                        <p class="text-white text-center fw-medium" style="font-size: 12px;">Our team is here to help
+                                            from 9:00 AM to 8:30 PM, Monday through Saturday.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="padding: 20px 0;">
+                <div class="features flex items-center content-center gap-20" style="margin: 0 auto;">
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-1.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">100% </span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Free Always</span>
+                        </div>
+                    </div>
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-2.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">Home </span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Collection</span>
+                        </div>
+                    </div>
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-3.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">Fast</span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Payment</span>
                         </div>
                     </div>
                 </div>
