--- a/email-templates/dark-7.html
+++ b/email-templates/dark-7.html
@@ -28,6 +28,7 @@
 
             main {
                 width: 600px;
+                max-width: 600px;
                 margin: 0 auto;
                 display: flex;
                 flex-direction: column;
@@ -108,6 +109,11 @@
                 font-weight: 700;
             }
 
+
+            .fw-extrabold {
+                font-weight: 800;
+            }
+
             .btn-main {
                 display: flex;
                 justify-content: center;
@@ -127,12 +133,13 @@
             }
 
             .border {
+                width: 100%;
                 border-top: 1px solid rgba(211, 212, 253, 0.2);
             }
 
             .help-box {
-                background-color: rgba(236, 241, 253, 0.7);
-                border: 1px dashed rgba(105, 93, 253, 1);
+                background-color: rgba(236, 241, 253, 0.1);
+                border: 1px dashed rgba(255, 255, 255, 0.3);
                 padding: 20px;
                 border-radius: 10px;
                 display: flex;
@@ -165,7 +172,7 @@
             .hb-line {
                 height: 20px;
                 width: 1px;
-                background-color: #D3D4FD;
+                background-color: rgba(211, 212, 253, 1);
             }
 
             .tc-title {
@@ -173,8 +180,8 @@
             }
 
             .card-hero {
-                background-color: #E8EAF1;
-                background-image: url(./assets/top-bg.png);
+                background-color: #675DF4;
+                background-image: url(./assets/top-bg-dark.png);
                 background-size: contain;
                 background-repeat: repeat;
                 display: flex;
@@ -191,7 +198,8 @@
             }
 
             .tc-car {
-                height: 190px;
+                height: 170px;
+                display: block;
             }
 
             .card-shadow {
@@ -200,7 +208,7 @@
 
             .car-plate {
                 border-radius: 1.5px;
-                border: 2px solid #101044;
+                border: 2px solid #FFFFFF;
                 display: flex;
                 align-items: center;
                 background-color: #EEF0FF;
@@ -209,10 +217,18 @@
                 margin: 0 auto;
             }
 
+            .cars-list .cp-blue {
+                height: 16px;
+            }
+
             .cp-number {
                 display: inline-block;
                 padding: 2px 6px;
                 font-weight: 600;
+            }
+
+            .cars-list .cp-number {
+                padding: 0px 3px;
             }
 
             .cp-blue {
@@ -241,6 +257,14 @@
                 height: 24px;
                 width: 1px;
                 background-color: #C4C5FC;
+            }
+
+            .cars-list .cd-info {
+                font-weight: 400;
+            }
+
+            .cars-list .cd-line {
+                height: 15px;
             }
 
             .cd-price {
@@ -289,6 +313,18 @@
 
             .gap-24 {
                 gap: 24px;
+            }
+
+            .gap-26 {
+                gap: 26px;
+            }
+
+            .gap-28 {
+                gap: 28px;
+            }
+
+            .gap-30 {
+                gap: 30px;
             }
 
             .feat-img {
@@ -344,7 +380,7 @@
             }
 
             .text-light {
-                color: rgba(255, 255, 255, 0.7);
+                color: rgba(255, 255, 255, 0.8);
             }
 
             .text-parrot {
@@ -420,8 +456,18 @@
             }
 
             .purple-underline {
-                height: 7px;
+                position: relative;
+            }
+
+            .purple-underline::after {
+                content: "";
+                position: absolute;
+                bottom: -5px;
+                left: 0;
+                height: 5px;
                 width: 100%;
+                background-image: url(./assets/purple-underline.png);
+                background-size: 100% 100%;
             }
 
             .ch-16 .tc-car {
@@ -494,6 +540,14 @@
             .sign-left {
                 padding-right: 30px;
             }
+
+            .cl-img {
+                border-radius: 3px;
+                height: 84px;
+                width: 165px;
+                object-fit: cover;
+                object-position: center;
+            }
         </style>
     </head>
 
@@ -502,34 +556,127 @@
             <a href="#"><img src="./assets/carsmart-hub-logo.png" alt="Logo" class="top-logo"></a>
             <div class="card-outer">
                 <div class="co-bg">
-                    <div class="card text-center" style="padding: 40px 40px;">
-                        <div class="flex-main">
-                            <div class="flex-col" style="gap: 24px; align-items: center;">
-                                <div class="flex-col" style="gap: 14px; align-items: center;">
-                                    <h5 style="font-size: 22px; font-weight: 500;" class="text-white text-center">Hey
-                                        <span class="text-purple">Avanttransport</span><br> Reset Your SmartHub Password
-                                    </h5>
-                                    <p class="fw-light text-white">It looks like you requested to reset your password.
-                                        To ensure the security of your account, please click the button below to create
-                                        a new password:</p>
+                    <div class="card text-center">
+                        <div class="flex-main" style="padding-bottom: 40px;">
+                            <div class="card-hero">
+                                <div class="tc-text" style="max-width: 330px;">
+                                    <h3 class="tc-title text-white fw-medium text-left">CONGRATULATIONS!
+                                        Your sale has been  <span class="text-parrot fw-extrabold">confirmed</span></h3>
                                 </div>
-                                <a href="#" class="btn btn-main">
-                                    <span>Reset password</span>
-                                    <img src="./assets/Rays-small.png" alt="Rays">
-                                </a>
+                                <div style="padding-top: 10px;">
+                                    <img src="./assets/Car-6.png" alt="Car" class="tc-car">
+                                </div>
                             </div>
-                            <div class="flex-col items-center" style="gap: 10px;">
-                                <p class="fw-light text-white text-center"> For your safety, this link will only be
-                                    active for the next 24 hours. If you did not request a password reset, please ignore
-                                    this email or contact us immediately. </p>
-                                <p class="text-white fw-light">SmartHub Customer Care Team</p>
+                            <div class="flex-col">
+                                <div class="flex-col gap-30" style="padding: 0 20px; line-height: 150%;">
+                                    <div class="flex-col gap-10 items-center">
+                                        <p class="fw-light text-white">
+                                            [Vendor Name]
+<br><br>
+                                            Good news! We’ve approved the seller’s documents, and they are now available for you to review. Please proceed to arrange the vehicle pick-up with the seller or use our SmartDrop service in your dashboard.
+                                            <br><br>                                            
+                                            Best regards,<br><br>
+                                            The Carsmart Customer Care Team
+                                        </p>
+                                        <p class="fw-light text-white">
+                                            You can monitor the progress of our document review below.
+                                        </p>
+                                    </div>
+                                    <div class="flex-col items-center">
+                                        <a href="#" class="btn btn-main">
+                                            <span>CHECK DOCUMENTS </span>
+                                            <img src="./assets/Rays-small.png" alt="Rays">
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="border"></div>
-                            <p class="text-light fw-light" style="font-size: 12px; line-height: 200%;"> If the button above does not work,
-                                please copy and paste the following link into your browser: <br><a href="#"
-                                    style="text-decoration: none;"
-                                    class="text-parrot">[https://rrrrrr.co.ukoken=eyJhbGciOiJIUzI1NiIsInRjnAH]</a>
-                            </p>
+                            <div style="padding: 0 20px;">
+                                <div class="help-box">
+                                    <img src="./assets/Help-Avatar.png" alt="Avatar" class="help-avatar"
+                                        style="height: 56px;">
+                                    <div class="flex-col" style="gap: 6px; align-items: center;">
+                                        <h5 class="fw-medium text-white" style="font-size: 16px;">Need help? Contact our
+                                            team</h5>
+                                        <div class="flex items-center text-white content-center" style="gap: 10px;">
+                                            <a class="flex items-center content-center hb-link" style="gap: 6px;">
+                                                <img src="./assets/phone-white.png" alt="Phone">
+                                                <span>020 8050 4743</span>
+                                            </a>
+                                            <div class="hb-line"></div>
+                                            <a class="flex items-center content-center hb-link" style="gap: 6px;">
+                                                <img src="./assets/envelope-white.png" alt="Phone">
+                                                <span>SmartHub@smarthub.trycarsmart.com</span>
+                                            </a>
+                                        </div>
+                                        <p class="text-white text-center fw-medium" style="font-size: 12px;">Our team is
+                                            here to help from 9:00 AM to 8:30 PM, Monday through Saturday.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="padding: 0 20px;">
+                                <div class="flex-col text-left gap-20">
+                                    <div class="flex-col gap-4">
+                                        <span class="fw-medium text-white" style="font-size: 20px;">Terms of Sale:</span>
+                                        <span class="fw-light text-white">By proceeding, you're agreeing to our full terms and conditions and our privacy policy. Here's a quick summary of the key points:</span>
+                                    </div>
+                                    <div class="flex-col gap-14">
+                                        <div class="flex-col gap-6">
+                                            <div class="flex items-center gap-10">
+                                                <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                                <span class="fw-medium text-white">Binding Agreement</span>
+                                            </div>
+                                            <p class="fw-light text-light" style="padding-left: 33px; font-size: 14px;">When you place a bid and the seller accepts it, you're entering into a legally binding contract to purchase the vehicle, provided it's accurately described in the listing.</p>
+                                        </div>
+                                        <div class="flex-col gap-6">
+                                            <div class="flex items-center gap-10">
+                                                <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                                <span class="fw-medium text-white">Timely Communication</span>
+                                            </div>
+                                            <p class="fw-light text-light" style="padding-left: 33px; font-size: 14px;">After receiving the seller's documents, please contact them within one working day to arrange the vehicle's collection.</p>
+                                        </div>
+                                        <div class="flex-col gap-6">
+                                            <div class="flex items-center gap-10">
+                                                <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                                <span class="fw-medium text-white">Payment of Fees</span>
+                                            </div>
+                                            <p class="fw-light text-light" style="padding-left: 33px; font-size: 14px;">Our fees are due once you've completed the purchase, if your have credit sales approved on your account. These fees vary based on the vehicle's value and are detailed here. All payments should be made to Carsmart Limited within seven days of receiving the invoice.</p>
+                                        </div>
+                                        <div class="flex-col gap-6">
+                                            <div class="flex items-center gap-10">
+                                                <img src="./assets/purple-check.png" alt="Check" style="height: 24px;">
+                                                <span class="fw-medium text-white">Offer Withdrawal</span>
+                                            </div>
+                                            <p class="fw-light text-light" style="padding-left: 33px; font-size: 14px;">If you withdraw your offer without a valid reason after an agreement has been made, the fee remains payable to Carsmart Limited.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="padding: 20px 0;">
+                <div class="features flex items-center content-center gap-20" style="margin: 0 auto;">
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-1.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">100% </span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Free Always</span>
+                        </div>
+                    </div>
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-2.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">Home </span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Collection</span>
+                        </div>
+                    </div>
+                    <div class="feature flex-col gap-10 items-center">
+                        <img src="./assets/feat-1-3.png" alt="Feature" class="feat-img">
+                        <div class="flex-col items-center text-center">
+                            <span class="text-white fw-medium" style="font-size: 13px;">Fast</span>
+                            <span class="text-white fw-light" style="font-size: 12px;">Payment</span>
                         </div>
                     </div>
                 </div>
