--- a/sell-my-car-brand.html
+++ b/sell-my-car-brand.html
@@ -218,7 +218,7 @@
                 </div>
             </section>
             <section class="py-5">
-                <div class="container py-lg-3">
+                <div class="container py-lg-3 pb-4">
                     <h2 class="hs-title text-center mb-5 purple-underline mx-auto">Cars sold recently</h2>
                     <div class="recently-slider">
                         <div class="rlcs-cont">
