--- a/pages.html
+++ b/pages.html
@@ -94,6 +94,8 @@
                 <li><a href="./smart-connect-landing.html" class="text-info">Smart connect Landing Page</a></li>
                 <li><a href="./smart-data-landing.html" class="text-info">Smart data Landing Page</a></li>
                 <li><a href="./refer-friend-landing.html" class="text-info">Refer friend Landing Page</a></li>
+                <li><a href="./smart-data-signin-1.html" class="text-info">Smart Data Sign In 1</a></li>
+                <li><a href="./smart-data-signin-2.html" class="text-info">Smart Data Sign In 2</a></li>
             </ol>
             <h2 class="text-center text-white mb-4">Carsmart: Email Templates (LIGHT)</h2>
             <ol class="fw-semibold text-white text-start text-capitalize mb-5">
