--- a/dashboard-voided-sales.html
+++ b/dashboard-voided-sales.html
@@ -30,7 +30,7 @@
                                     data-bs-toggle="dropdown" aria-expanded="false"> SmartHub </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="./live-sale.html">Live sale</a></li>
-                                    <li><a class="dropdown-item active" href="./buy-it-now.html">£34567.00</a></li>
+                                    <li><a class="dropdown-item active" href="./buy-it-now.html">Buy it now</a></li>
                                     <li><a class="dropdown-item" href="./smart-connect.html">Smart Connect</a></li>
                                     <li><a class="dropdown-item" href="./favourites.html">Favourites</a></li>
                                     <li><a class="dropdown-item" href="./editions.html">Editions</a></li>
