--- a/add-car-2.html
+++ b/add-car-2.html
@@ -132,8 +132,8 @@
                             </form>
                         </div>
                         <div class="d-flex flex-wrap gap-2">
-                            <img src="./assets/img/trust-pilot.svg" height="42" alt="Reviews">
-                            <img src="./assets/img/google-reviews.svg" height="42" alt="Reviews">
+                            <img src="./assets/img/trust-pilot.png" height="42" alt="Reviews">
+                            <img src="./assets/img/google-reviews.png" height="42" alt="Reviews">
                         </div>
                     </div>
                 </div>
