--- a/smart-connect-landing.html
+++ b/smart-connect-landing.html
@@ -140,27 +140,32 @@
                                 <div class="row">
                                     <div class="col-md-6 pb-4">
                                         <div class="wsc-card h-100">
-                                            <span class="light-text fw-light">Wholesale sales:</span>
+                                            <span class="light-text fw-semibold">Wholesale sales:</span>
                                             <span class="text-white fw-normal">Perfect for bulk transactions.</span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4">
                                         <div class="wsc-card h-100">
-                                            <span class="light-text fw-light">Quick sales:</span>
+                                            <span class="light-text fw-semibold">Quick sales:</span>
                                             <span class="text-white fw-normal">For fast and efficient deals.</span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4">
                                         <div class="wsc-card h-100">
-                                            <span class="light-text fw-light">Online live sales:</span>
-                                            <span class="text-white fw-normal">Engage buyers in real-time.</span>
+                                            <span class="light-text fw-semibold">Editions listings:</span>
+                                            <span class="text-white fw-normal">Specialised auction: rare, classic, collectible, nostalgic cars, professional photography, expert curation, set reserve, competitive bidding</span>
                                         </div>
                                     </div>
                                     <div class="col-md-6 pb-4">
                                         <div class="wsc-card h-100">
-                                            <span class="light-text fw-light">Marketplace listings:</span>
-                                            <span class="text-white fw-normal">Ideal for niche stock, part exchanges, or vehicles
-                                                needing a new home.</span>
+                                            <span class="light-text fw-semibold">Online live sales:</span>
+                                            <span class="text-white fw-normal">Engage buyers in real-time with SmartConnect trade sales.</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 pb-4">
+                                        <div class="wsc-card h-100">
+                                            <span class="light-text fw-semibold">Buy it now listings:</span>
+                                            <span class="text-white fw-normal">Ideal for niche stock, part exchanges, or vehicles needing a new home.</span>
                                         </div>
                                     </div>
                                 </div>
