--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=19">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=20">
     </head>
 
     <body>
@@ -105,6 +105,9 @@
                 <li><a href="./editions-signin-confirmation.html" class="text-info">CarSmart Signin Confirmation</a></li>
                 <li><a href="./carsmart-dashboard.html" class="text-info">CarSmart Dashboard</a></li>
                 <li><a href="./carsmart-smartwallet.html" class="text-info">CarSmart SmartWallet</a></li>
+                <li><a href="./smart-wallet-add-card.html" class="text-info">Smart Wallet Add Card</a></li>
+                <li><a href="./carsmart-add-card.html" class="text-info">Carsmart Add Card</a></li>
+                <li><a href="./carsmart-add-bank.html" class="text-info">Carsmart Add Bank</a></li>
             </ol>
             <h2 class="text-center text-white mb-4">Carsmart: Email Templates (LIGHT)</h2>
             <ol class="fw-semibold text-white text-start text-capitalize mb-5">
@@ -156,7 +159,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=19"></script>
+        <script src="./assets/js/custom.js?v=20"></script>
     </body>
 
 </html>
