--- a/carsmart-add-bank.html
+++ b/carsmart-add-bank.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=19">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=20">
     </head>
 
     <body class="light-page customer-page editions-details-page edp">
@@ -133,104 +133,73 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <form method="post" action="#">
-                                        <div class="row">
-                                            <div class="col-lg-6 pb-lg-0 pb-4">
-                                                <div class="smart-wallet-balance-max mx-auto">
-                                                    <div class="d-flex flex-column swb-flex">
-                                                        <div class="swb-box swb-box-bottom">
-                                                            <div class="p-3">
-                                                                <div
-                                                                    class="d-flex align-items-center justify-content-between p-1">
-                                                                    <span class="text-white swb-text fw-medium">Topup
-                                                                        wallet</span>
-                                                                    <img src="./assets/img/info-icon.svg" alt="Info"
-                                                                        class="cdc-info cdc-info-sm"
-                                                                        onclick="openModal('paymentFundsPopup')">
+                                    <div class="row">
+                                        <div class="col-xl-6 pb-xl-0 pb-4">
+                                            <div class="swb-box p-3">
+                                                <div class="swbb-flex-1 p-1 d-flex flex-column">
+                                                    <div class="swbb-form-group d-flex flex-column gap-2">
+                                                        <label class="swb-label fw-medium text-white"> Name of account
+                                                            holder </label>
+                                                        <div class="position-relative">
+                                                            <input type="text" class="swb-inp form-control"
+                                                                placeholder="Enter your full name">
+                                                        </div>
+                                                    </div>
+                                                    <div class="swbb-form-group d-flex flex-column gap-2">
+                                                        <label class="swb-label fw-medium text-white"> Account Number
+                                                        </label>
+                                                        <div class="position-relative">
+                                                            <input type="text" class="swb-inp form-control"
+                                                                placeholder="Enter number">
+                                                        </div>
+                                                    </div>
+                                                    <div class="swbb-form-group d-flex flex-column gap-2">
+                                                        <label class="swb-label fw-medium text-white"> Sort Code
+                                                        </label>
+                                                        <div class="position-relative">
+                                                            <input type="text" class="swb-inp form-control"
+                                                                placeholder="Enter code">
+                                                        </div>
+                                                    </div>
+                                                    <div class="swbb-form-group d-flex flex-column gap-2">
+                                                        <label class="swb-label fw-medium text-white"> Type of account
+                                                        </label>
+                                                        <div class="position-relative">
+                                                            <div class="sfc-checks">
+                                                                <div class="form-check check-type-1">
+                                                                    <input class="form-check-input" type="radio"
+                                                                        value="Personal" name="check_5" id="check_5_1">
+                                                                    <label class="form-check-label text-main"
+                                                                        for="check_5_1"> Personal </label>
                                                                 </div>
-                                                            </div>
-                                                            <div class="swbb-content pb-3 px-3">
-                                                                <div
-                                                                    class="swbb-content-flex px-1 pb-1 d-flex flex-column gap-3">
-                                                                    <div class="swbb-inp-cont">
-                                                                        <div class="d-flex flex-column gap-1">
-                                                                            <label for="price-inp"
-                                                                                class="swbb-label">Enter Amount</label>
-                                                                            <div class="swbb-inp-rel position-relative">
-                                                                                <span
-                                                                                    class="swbb-currency">&pound;</span>
-                                                                                <input type="number"
-                                                                                    class="form-control swbb-inp bg-transparent border-0 outline-0"
-                                                                                    min="0" value="500">
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="d-flex swbb-increment-flex flex-wrap">
-                                                                        <span class="d-flex swbb-inc-btn"
-                                                                            onclick="increasePrice(2000)">+ £
-                                                                            2000</span>
-                                                                        <span class="d-flex swbb-inc-btn"
-                                                                            onclick="increasePrice(5000)">+ £
-                                                                            5000</span>
-                                                                        <span class="d-flex swbb-inc-btn"
-                                                                            onclick="increasePrice(10000)">+ £
-                                                                            10,000</span>
-                                                                    </div>
-                                                                    <button type="submit"
-                                                                        class="btn btn-main w-100 justify-content-center d-flex align-items-center"><span>Complete</span><svg
-                                                                            width="11" height="26" viewBox="0 0 11 26"
-                                                                            fill="none"
-                                                                            xmlns="http://www.w3.org/2000/svg">
-                                                                            <path
-                                                                                d="M3.52377 12.9643C3.52377 13.992 4.35489 14.8281 5.3764 14.8281L8.49893 14.8281C9.52046 14.8281 10.3516 13.992 10.3516 12.9643C10.3516 11.9365 9.52044 11.1004 8.49893 11.1004L5.3764 11.1004C4.35487 11.1004 3.52377 11.9365 3.52377 12.9643Z"
-                                                                                fill="#101044" />
-                                                                            <path
-                                                                                d="M5.93474 21.9347L3.54276 19.9152C3.20943 19.6341 2.78676 19.4795 2.35258 19.4795C1.80318 19.4795 1.2857 19.7221 0.932665 20.1452C0.614557 20.5266 0.463165 21.0099 0.506377 21.5057C0.54939 22.0017 0.781952 22.451 1.16111 22.7711L3.55309 24.7906C3.88632 25.0717 4.30909 25.2266 4.74327 25.2266C5.29277 25.2266 5.81025 24.9838 6.16318 24.5606C6.81968 23.7733 6.71727 22.5952 5.93474 21.9347Z"
-                                                                                fill="#101044" />
-                                                                            <path
-                                                                                d="M2.35266 6.48437C2.78704 6.48437 3.20971 6.32951 3.54274 6.04824L5.93472 4.0289C6.71725 3.36842 6.81968 2.19033 6.16318 1.40305C5.81025 0.979864 5.29277 0.737066 4.74337 0.737066C4.30889 0.737066 3.88612 0.891929 3.55309 1.1734L1.16111 3.19254C0.781952 3.51248 0.549389 3.96195 0.506377 4.45816C0.463165 4.95397 0.614557 5.43701 0.932665 5.81839C1.28559 6.24158 1.80306 6.48437 2.35266 6.48437Z"
-                                                                                fill="#101044" />
-                                                                        </svg>
-                                                                    </button>
+                                                                <div class="form-check check-type-1">
+                                                                    <input class="form-check-input" type="radio"
+                                                                        value="Business" name="check_5" id="check_5_2">
+                                                                    <label class="form-check-label text-main"
+                                                                        for="check_5_2"> Business </label>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="swb-box swb-box-top">
-                                                    <div class="p-3 swbt-header">
-                                                        <div
-                                                            class="d-flex align-items-center justify-content-between px-1 py-2">
-                                                            <span class="text-white swb-text fw-medium">Your available
-                                                                balance</span>
-                                                            <span class="text-purple swb-text fw-semibold">£
-                                                                11.000</span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="swbt-content d-flex flex-column p-4">
-                                                        <div class="d-flex align-items-center justify-content-between">
-                                                            <span class="swbt-text swb-text fw-normal">Last top
-                                                                up</span>
-                                                            <span class="swbt-text">
-                                                                <span class="swb-text fw-medium">£ 1235</span>
-                                                                <span class="fw-normal"> - 23 july, 2024</span>
-                                                            </span>
-                                                        </div>
-                                                        <div class="d-flex align-items-center justify-content-between">
-                                                            <span class="swbt-text swb-text fw-normal">Last
-                                                                transaction</span>
-                                                            <span class="swbt-text">
-                                                                <span class="swb-text fw-medium">£ 3540</span>
-                                                                <span class="fw-normal"> - 14 august, 2024</span>
-                                                            </span>
-                                                        </div>
-                                                    </div>
+                                                    <button
+                                                        class="btn btn-main w-100 justify-content-center d-flex align-items-center"><span>Submit</span><svg
+                                                            width="11" height="26" viewBox="0 0 11 26" fill="none"
+                                                            xmlns="http://www.w3.org/2000/svg">
+                                                            <path
+                                                                d="M3.52377 12.9643C3.52377 13.992 4.35489 14.8281 5.3764 14.8281L8.49893 14.8281C9.52046 14.8281 10.3516 13.992 10.3516 12.9643C10.3516 11.9365 9.52044 11.1004 8.49893 11.1004L5.3764 11.1004C4.35487 11.1004 3.52377 11.9365 3.52377 12.9643Z"
+                                                                fill="#101044" />
+                                                            <path
+                                                                d="M5.93474 21.9347L3.54276 19.9152C3.20943 19.6341 2.78676 19.4795 2.35258 19.4795C1.80318 19.4795 1.2857 19.7221 0.932665 20.1452C0.614557 20.5266 0.463165 21.0099 0.506377 21.5057C0.54939 22.0017 0.781952 22.451 1.16111 22.7711L3.55309 24.7906C3.88632 25.0717 4.30909 25.2266 4.74327 25.2266C5.29277 25.2266 5.81025 24.9838 6.16318 24.5606C6.81968 23.7733 6.71727 22.5952 5.93474 21.9347Z"
+                                                                fill="#101044" />
+                                                            <path
+                                                                d="M2.35266 6.48437C2.78704 6.48437 3.20971 6.32951 3.54274 6.04824L5.93472 4.0289C6.71725 3.36842 6.81968 2.19033 6.16318 1.40305C5.81025 0.979864 5.29277 0.737066 4.74337 0.737066C4.30889 0.737066 3.88612 0.891929 3.55309 1.1734L1.16111 3.19254C0.781952 3.51248 0.549389 3.96195 0.506377 4.45816C0.463165 4.95397 0.614557 5.43701 0.932665 5.81839C1.28559 6.24158 1.80306 6.48437 2.35266 6.48437Z"
+                                                                fill="#101044" />
+                                                        </svg>
+                                                    </button>
                                                 </div>
                                             </div>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -450,7 +419,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=19"></script>
+        <script src="./assets/js/custom.js?v=20"></script>
     </body>
 
 </html>
