New pages added.

--- a/our-policy.html
+++ b/our-policy.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=20">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=21">
     </head>
 
     <body>
@@ -112,7 +112,7 @@
                 <div class="container">
                     <div class="d-flex flex-column gap-4 align-items-center text-center text-white">
                         <div class="d-flex align-items-center gap-2 justify-content-center">
-                            <img src="./assets/img/Rays-purple-left.svg" alt="Rays" style="width: 37px;">
+                            <img src="./assets/img/Rays-purple-left.svg" alt="Rays" style="width: 37px;" class="page-rays">
                             <span class="page-title ms-1">Our Policy </span>
                         </div>
                         <p class="mt-lg-2 page-subtitle mb-0">Price changes and Voided Sales Policy</p>
@@ -356,7 +356,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=20"></script>
+        <script src="./assets/js/custom.js?v=21"></script>
     </body>
 
 </html>
