--- a/pages.html
+++ b/pages.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="./assets/css/slick-theme.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.css">
         <link href="./assets/css/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="./assets/css/custom.css?v=20">
+        <link rel="stylesheet" href="./assets/css/custom.css?v=21">
     </head>
 
     <body>
@@ -108,6 +108,13 @@
                 <li><a href="./smart-wallet-add-card.html" class="text-info">Smart Wallet Add Card</a></li>
                 <li><a href="./carsmart-add-card.html" class="text-info">Carsmart Add Card</a></li>
                 <li><a href="./carsmart-add-bank.html" class="text-info">Carsmart Add Bank</a></li>
+                <li><a href="./terms-logged-in.html" class="text-info">Terms Logged In</a></li>
+                <li><a href="./terms-not-logged-in.html" class="text-info">Terms NOT Logged In</a></li>
+                <li><a href="./help-1.html" class="text-info">Help Page</a></li>
+                <li><a href="./help-2.html" class="text-info">Help Questions</a></li>
+                <li><a href="./help-3.html" class="text-info">Help Details</a></li>
+                <li><a href="./smart-guidelines.html" class="text-info">Smart Guidelines</a></li>
+                <li><a href="./sitemap.html" class="text-info">Sitemap</a></li>
             </ol>
             <h2 class="text-center text-white mb-4">Carsmart: Email Templates (LIGHT)</h2>
             <ol class="fw-semibold text-white text-start text-capitalize mb-5">
@@ -159,7 +166,7 @@
         <script src="./assets/js/aos.js"></script>
         <script src="./assets/js/slick.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.3/rangeslider.min.js"></script>
-        <script src="./assets/js/custom.js?v=20"></script>
+        <script src="./assets/js/custom.js?v=21"></script>
     </body>
 
 </html>
