--- a/pages.html
+++ b/pages.html
@@ -115,6 +115,10 @@
                 <li><a href="./help-3.html" class="text-info">Help Details</a></li>
                 <li><a href="./smart-guidelines.html" class="text-info">Smart Guidelines</a></li>
                 <li><a href="./sitemap.html" class="text-info">Sitemap</a></li>
+                <li><a href="./cookies.html" class="text-info">Cookies</a></li>
+                <li><a href="./cookies-not-logged-in.html" class="text-info">Cookies NOT Logged In</a></li>
+                <li><a href="./privacy-policy.html" class="text-info">Privacy Policy</a></li>
+                <li><a href="./privacy-policy-not-logged-in.html" class="text-info">Privacy Policy NOT Logged In</a></li>
             </ol>
             <h2 class="text-center text-white mb-4">Carsmart: Email Templates (LIGHT)</h2>
             <ol class="fw-semibold text-white text-start text-capitalize mb-5">
