--- a/email-templates/dark-12.html
+++ b/email-templates/dark-12.html
@@ -584,7 +584,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="flex-col">
+                            <div class="flex-col flex-main">
                                 <div class="flex-col gap-10" style="padding: 0 20px;">
                                     <span class="text-white fw-light">We have <span class="fw-semibold">1,045
                                             vehicles</span> now available in today's sale!</span>
