--- a/editions-landing.html
+++ b/editions-landing.html
@@ -21,7 +21,7 @@
                 <div class="container gap-3 position-relative">
                     <!-- Left: Logo -->
                     <a class="navbar-brand me-0" href="./index.html">
-                        <img src="./assets/img/Purple-Logo.svg" alt="Logo">
+                        <img src="./assets/img/editions-logo.svg" class="editions-logo" alt="Logo">
                     </a>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                         <ul class="navbar-nav">
@@ -76,10 +76,10 @@
                     <div class="container">
                         <div class="d-flex smc-hero-content flex-column gap-4 mb-md-0 mb-sm-5 pb-5">
                             <div class="smc-title">
-                                <h2 class="mb-0 fw-medium">Editions </h2>
+                                <h2 class="mb-0 fw-medium">Editions. </h2>
                             </div>
                             <div class="d-flex flex-column gap-4">
-                                <div class="smch-crf mb-2">
+                                <div class="smch-crf elp-smch-crf mb-2">
                                     <form action="" class="car-reg-form" method="post">
                                         <input type="text" class="crf-inp fw-medium text-start"
                                             placeholder="Search for make, model, categopry">
@@ -122,43 +122,6 @@
         <!-- Header End -->
         <!-- Main -->
         <main>
-            <section class="elp-filters">
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Make and model</option>
-                    <option value="Make Model 1">Make Model 1</option>
-                    <option value="Make Model 2">Make Model 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Price</option>
-                    <option value="Price 1">Price 1</option>
-                    <option value="Price 2">Price 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Age</option>
-                    <option value="Age 1">Age 1</option>
-                    <option value="Age 2">Age 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Fuel</option>
-                    <option value="Fuel 1">Fuel 1</option>
-                    <option value="Fuel 2">Fuel 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Gearbox</option>
-                    <option value="Gearbox 1">Gearbox 1</option>
-                    <option value="Gearbox 2">Gearbox 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Mileage</option>
-                    <option value="Mileage 1">Mileage 1</option>
-                    <option value="Mileage 2">Mileage 2</option>
-                </select>
-                <select name="" id="" class="elpf-select form-select">
-                    <option value="">Body type</option>
-                    <option value="Body type 1">Body type 1</option>
-                    <option value="Body type 2">Body type 2</option>
-                </select>
-            </section>
             <section class="pt-3 pb-5">
                 <div class="container pt-1">
                     <div class="d-flex flex-column gap-4">
