--- a/editions-signin.html
+++ b/editions-signin.html
@@ -21,7 +21,7 @@
                 <div class="container gap-3 position-relative">
                     <!-- Left: Logo -->
                     <a class="navbar-brand me-0" href="./index.html">
-                        <img src="./assets/img/Purple-Logo.svg" alt="Logo">
+                        <img src="./assets/img/editions-logo.svg" class="editions-logo" alt="Logo">
                     </a>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
                         <ul class="navbar-nav">
