--- a/smart-wallet-landing.html
+++ b/smart-wallet-landing.html
@@ -348,7 +348,7 @@
                                 </div>
                             </div>
                             <div class="ft-right d-flex flex-column gap-3">
-                                <h3 class="ftr-title">Want to sell your car? Head over to:</h3>
+                                <h3 class="ftr-title">Want to sell your car? head over to:</h3>
                                 <div class="mt-1">
                                     <a href="#" class="btn btn-main d-flex align-items-center"><span>CARSMART</span><svg
                                             width="11" height="26" viewBox="0 0 11 26" fill="none"
